--- a/index.html
+++ b/index.html
@@ -1,39 +1,92 @@
-    <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Your Name | Makeup Artist</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DAMINI GUPTA | Makeup Artist</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-<header>
-  <h1>Your Name</h1>
-  <p>Professional Makeup Artist</p>
-  <p>Bridal | Party | Occasion</p>
+<!-- HERO SECTION -->
+<header class="hero">
+  <div class="hero-content">
+    <h1>DAMINI <span>GUPTA</span></h1>
+    <h2>MAKEUP ARTIST</h2>
+    <p>Bridal • Party • Occasion</p>
+    <div class="hero-buttons">
+      <a href="https://instagram.com/d__glam_makeovers" target="_blank">Instagram</a>
+      <a href="https://wa.me/917006229781" target="_blank">WhatsApp</a>
+    </div>
+  </div>
 </header>
 
-<section>
-  <h2>About Me</h2>
+<!-- ABOUT -->
+<section class="section about">
+  <h3>About Me</h3>
   <p>
-    Certified Makeup Artist trained at UK International London Beauty School, Noida.
-    Specializing in bridal and occasion makeup with a focus on flawless base and
-    blended eye looks.
+    Certified and passionate Bridal Makeup Artist with advanced professional training
+    from <strong>UK International London Beauty School, Noida</strong>.
+    Skilled in creating flawless, elegant, and long-lasting bridal looks tailored to
+    individual features and occasions.
+  </p>
+  <p>
+    Strong understanding of skin preparation, face structure, hygiene standards,
+    and modern bridal trends. Committed to delivering premium-quality results with
+    professionalism and creativity.
   </p>
 </section>
 
-<section>
-  <h2>Portfolio</h2>
-  <img src="images/look1.jpg">
-  <img src="images/look2.jpg">
-  <img src="images/look3.jpg">
+<!-- SKILLS -->
+<section class="section skills">
+  <h3>Expertise</h3>
+  <div class="skills-grid">
+    <span>HD Bridal Makeup</span>
+    <span>Engagement & Party Makeup</span>
+    <span>Red Carpet & Cocktail Makeup</span>
+    <span>Fantasy & Prosthetic Makeup</span>
+    <span>Skin Analysis & Preparation</span>
+    <span>Face Morphology & Color Theory</span>
+  </div>
 </section>
 
-<section>
-  <h2>Contact</h2>
-  <p>📍 Noida</p>
-  <p>📞 XXXXXXXXXX</p>
-  <p>📸 Instagram: @yourhandle</p>
+<!-- PORTFOLIO -->
+<section class="section portfolio">
+  <h3>Portfolio</h3>
+  <div class="portfolio-grid">
+    <img src="images/look1.jpg" alt="Bridal Makeup">
+    <img src="images/look2.jpg" alt="Party Makeup">
+    <img src="images/look3.jpg" alt="Glam Makeup">
+  </div>
 </section>
+
+<!-- CORE SKILLS -->
+<section class="section core">
+  <h3>Core Strengths</h3>
+  <ul>
+    <li>Bridal & HD Makeup</li>
+    <li>Eye Makeup – Soft Glam, Cut Crease, Halo Eyes</li>
+    <li>Base Perfection & Color Correction</li>
+    <li>Long-lasting & Camera-ready Makeup</li>
+    <li>Client Consultation & Customization</li>
+    <li>Calm, punctual & professional approach</li>
+  </ul>
+</section>
+
+<!-- CONTACT -->
+<section class="section contact">
+  <h3>Contact</h3>
+  <p>📍 Sector 26, Noida</p>
+  <p>📞 +91-7006229781</p>
+  <p>📧 daminigupta017@gmail.com</p>
+  <p>📸 Instagram: d__glam_makeovers</p>
+</section>
+
+<footer>
+  <p>© 2026 Damini Gupta | Makeup Artist</p>
+</footer>
 
 </body>
 </html>
