--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </header>
 
 <!-- ABOUT -->
-<section class="section about">
+<section class="section about animate">
   <h3>About Me</h3>
   <p>
     Certified and passionate Bridal Makeup Artist with advanced professional training
@@ -40,7 +40,7 @@
 </section>
 
 <!-- SKILLS -->
-<section class="section skills">
+<section class="section skills animate">
   <h3>Expertise</h3>
   <div class="skills-grid">
     <span>HD Bridal Makeup</span>
@@ -53,7 +53,7 @@
 </section>
 
 <!-- PORTFOLIO -->
-<section class="section portfolio">
+<section class="section portfolio animate">
   <h3>Portfolio</h3>
   <div class="portfolio-grid">
     <img src="images/look1.jpg" alt="Bridal Makeup">
@@ -63,7 +63,7 @@
 </section>
 
 <!-- CORE SKILLS -->
-<section class="section core">
+<section class="section core animate">
   <h3>Core Strengths</h3>
   <ul>
     <li>Bridal & HD Makeup</li>
@@ -76,7 +76,7 @@
 </section>
 
 <!-- CONTACT -->
-<section class="section contact">
+<section class="section contact animate">
   <h3>Contact</h3>
   <p>📍 Sector 26, Noida</p>
   <p>📞 +91-7006229781</p>
