--- a/index.html
+++ b/index.html
@@ -1,92 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DAMINI GUPTA | Makeup Artist</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400;500&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
 
-<!-- HERO SECTION -->
-<header class="hero">
-  <div class="hero-content">
-    <h1>DAMINI <span>GUPTA</span></h1>
-    <h2>MAKEUP ARTIST</h2>
-    <p>Bridal • Party • Occasion</p>
-    <div class="hero-buttons">
-      <a href="https://instagram.com/d__glam_makeovers" target="_blank">Instagram</a>
-      <a href="https://wa.me/917006229781" target="_blank">WhatsApp</a>
+  <!-- HERO SECTION -->
+  <header class="hero">
+    <div class="hero-content">
+      <h1>DAMINI <span>GUPTA</span></h1>
+      <h2>MAKEUP ARTIST</h2>
+      <p>Bridal • Party • Occasion</p>
+      <div class="hero-buttons">
+        <a href="https://instagram.com/d__glam_makeovers" target="_blank">Instagram</a>
+        <a href="https://wa.me/917006229781" target="_blank">WhatsApp</a>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<!-- ABOUT -->
-<section class="section about animate">
-  <h3>About Me</h3>
-  <p>
-    Certified and passionate Bridal Makeup Artist with advanced professional training
-    from <strong>UK International London Beauty School, Noida</strong>.
-    Skilled in creating flawless, elegant, and long-lasting bridal looks tailored to
-    individual features and occasions.
-  </p>
-  <p>
-    Strong understanding of skin preparation, face structure, hygiene standards,
-    and modern bridal trends. Committed to delivering premium-quality results with
-    professionalism and creativity.
-  </p>
-</section>
+  <!-- ABOUT -->
+  <section class="section about animate">
+    <h3>About Me</h3>
+    <p>
+      Certified and passionate Bridal Makeup Artist with advanced professional training
+      from <strong>UK International London Beauty School, Noida</strong>.
+      Skilled in creating flawless, elegant, and long-lasting bridal looks tailored to
+      individual features and occasions.
+    </p>
+    <p>
+      Strong understanding of skin preparation, face structure, hygiene standards,
+      and modern bridal trends. Committed to delivering premium-quality results with
+      professionalism and creativity.
+    </p>
+  </section>
 
-<!-- SKILLS -->
-<section class="section skills animate">
-  <h3>Expertise</h3>
-  <div class="skills-grid">
-    <span>HD Bridal Makeup</span>
-    <span>Engagement & Party Makeup</span>
-    <span>Red Carpet & Cocktail Makeup</span>
-    <span>Fantasy & Prosthetic Makeup</span>
-    <span>Skin Analysis & Preparation</span>
-    <span>Face Morphology & Color Theory</span>
-  </div>
-</section>
+  <!-- SKILLS -->
+  <section class="section skills animate">
+    <h3>Expertise</h3>
+    <div class="skills-grid">
+      <span>HD Bridal Makeup</span>
+      <span>Engagement & Party Makeup</span>
+      <span>Red Carpet & Cocktail Makeup</span>
+      <span>Fantasy & Prosthetic Makeup</span>
+      <span>Skin Analysis & Preparation</span>
+      <span>Face Morphology & Color Theory</span>
+    </div>
+  </section>
 
-<!-- PORTFOLIO -->
-<section class="section portfolio animate">
-  <h3>Portfolio</h3>
-  <div class="portfolio-grid">
-    <img src="images/look1.jpg" alt="Bridal Makeup">
-    <img src="images/look2.jpg" alt="Party Makeup">
-    <img src="images/look3.jpg" alt="Glam Makeup">
-  </div>
-</section>
+  <!-- PORTFOLIO -->
+  <section class="section portfolio animate">
+    <h3>Portfolio</h3>
+    <div class="portfolio-grid">
+      <img src="images/look1.jpg" alt="Makeup">
+      <img src="images/look2.jpg" alt="Makeup">
+      <img src="images/look3.jpg" alt="Makeup">
+      <img src="images/look4.jpg" alt="Makeup">
+      <!-- <img src="images/look5.jpg" alt="Makeup"> -->
+      <img src="images/look6.jpg" alt="Makeup">
+      <img src="images/look7.jpg" alt="Makeup">
+      <img src="images/look8.jpg" alt="Makeup">
+      <img src="images/look9.jpg" alt="Makeup">
+      <img src="images/look10.jpg" alt="Makeup">
+      <img src="images/look11.jpg" alt="Makeup">
+    </div>
+  </section>
 
-<!-- CORE SKILLS -->
-<section class="section core animate">
-  <h3>Core Strengths</h3>
-  <ul>
-    <li>Bridal & HD Makeup</li>
-    <li>Eye Makeup – Soft Glam, Cut Crease, Halo Eyes</li>
-    <li>Base Perfection & Color Correction</li>
-    <li>Long-lasting & Camera-ready Makeup</li>
-    <li>Client Consultation & Customization</li>
-    <li>Calm, punctual & professional approach</li>
-  </ul>
-</section>
+  <!-- CONTACT -->
+  <section class="section contact animate">
+    <h3>Contact</h3>
+    <p>📍 Sector 26, Noida</p>
+    <p>📞 +91-7006229781</p>
+    <p>📧 daminigupta017@gmail.com</p>
+    <p>📸 Instagram: d__glam_makeovers</p>
+  </section>
 
-<!-- CONTACT -->
-<section class="section contact animate">
-  <h3>Contact</h3>
-  <p>📍 Sector 26, Noida</p>
-  <p>📞 +91-7006229781</p>
-  <p>📧 daminigupta017@gmail.com</p>
-  <p>📸 Instagram: d__glam_makeovers</p>
-</section>
-
-<footer>
-  <p>© 2026 Damini Gupta | Makeup Artist</p>
-</footer>
+  <footer>
+    <p>© 2026 Damini Gupta | Makeup Artist</p>
+  </footer>
 
 </body>
+
 </html>
