--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400;500&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
 </head>
 
 <body>
@@ -20,9 +22,16 @@
       <h2>MAKEUP ARTIST</h2>
       <p>Bridal • Party • Occasion</p>
       <div class="hero-buttons">
-        <a href="https://instagram.com/d__glam_makeovers" target="_blank">Instagram</a>
-        <a href="https://wa.me/917006229781" target="_blank">WhatsApp</a>
+        <a href="https://instagram.com/d__glam_makeovers" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+          Instagram
+        </a>
+        <a href="https://wa.me/917006229781" target="_blank">
+          <i class="fa-brands fa-whatsapp"></i>
+          WhatsApp
+        </a>
       </div>
+
     </div>
   </header>
 
