--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
           WhatsApp
         </a>
       </div>
-
     </div>
   </header>
 
@@ -68,17 +67,17 @@
   <section class="section portfolio animate">
     <h3>Portfolio</h3>
     <div class="portfolio-grid">
-      <img src="images/look1.jpg" alt="Makeup">
-      <img src="images/look2.jpg" alt="Makeup">
-      <img src="images/look3.jpg" alt="Makeup">
-      <img src="images/look4.jpg" alt="Makeup">
+      <img src="images/look1.jpg" alt="Makeup" loading="lazy">
+      <img src="images/look2.jpg" alt="Makeup" loading="lazy">
+      <img src="images/look3.jpg" alt="Makeup" loading="lazy">
+      <img src="images/look4.jpg" alt="Makeup" loading="lazy">
       <!-- <img src="images/look5.jpg" alt="Makeup"> -->
-      <img src="images/look6.jpg" alt="Makeup">
-      <img src="images/look7.jpg" alt="Makeup">
-      <img src="images/look8.jpg" alt="Makeup">
-      <img src="images/look9.jpg" alt="Makeup">
-      <img src="images/look10.jpg" alt="Makeup">
-      <img src="images/look11.jpg" alt="Makeup">
+      <img src="images/look6.jpg" alt="Makeup" loading="lazy">
+      <img src="images/look7.jpg" alt="Makeup" loading="lazy">
+      <img src="images/look8.jpg" alt="Makeup" loading="lazy">
+      <img src="images/look9.jpg" alt="Makeup" loading="lazy">
+      <img src="images/look10.jpg" alt="Makeup" loading="lazy">
+      <img src="images/look11.jpg" alt="Makeup" loading="lazy">
     </div>
   </section>
 
