--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <p>
       Certified and passionate Bridal Makeup Artist with advanced professional training
       from <strong>UK International London Beauty School, Noida</strong>.
-      Skilled in creating flawless, elegant, and long-lasting bridal looks tailored to
+      Skilled in creating flawless, elegant, and long-lasting bridal s tailored to
       individual features and occasions.
     </p>
     <p>
@@ -67,17 +67,17 @@
   <section class="section portfolio animate">
     <h3>Portfolio</h3>
     <div class="portfolio-grid">
-      <img src="images/look1.jpg" alt="Makeup" loading="lazy">
-      <img src="images/look2.jpg" alt="Makeup" loading="lazy">
-      <img src="images/look3.jpg" alt="Makeup" loading="lazy">
-      <img src="images/look4.jpg" alt="Makeup" loading="lazy">
-      <!-- <img src="images/look5.jpg" alt="Makeup"> -->
-      <img src="images/look6.jpg" alt="Makeup" loading="lazy">
-      <img src="images/look7.jpg" alt="Makeup" loading="lazy">
-      <img src="images/look8.jpg" alt="Makeup" loading="lazy">
-      <img src="images/look9.jpg" alt="Makeup" loading="lazy">
-      <img src="images/look10.jpg" alt="Makeup" loading="lazy">
-      <img src="images/look11.jpg" alt="Makeup" loading="lazy">
+      <img src="images/1.webp" alt="Makeup" loading="lazy">
+      <img src="images/2.webp" alt="Makeup" loading="lazy">
+      <img src="images/3.webp" alt="Makeup" loading="lazy">
+      <img src="images/4.webp" alt="Makeup" loading="lazy">
+      <!-- <img src="images/5.webp" alt="Makeup"> -->
+      <img src="images/6.webp" alt="Makeup" loading="lazy">
+      <img src="images/7.webp" alt="Makeup" loading="lazy">
+      <img src="images/8.webp" alt="Makeup" loading="lazy">
+      <img src="images/9.webp" alt="Makeup" loading="lazy">
+      <img src="images/10.jpg" alt="Makeup" loading="lazy">
+      <img src="images/11.jpg" alt="Makeup" loading="lazy">
     </div>
   </section>
 
