Added profile pic

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <!-- HERO SECTION -->
   <header class="hero">
     <div class="hero-content">
+      <div class="hero-profile">
+        <img src="images/damini.webp" alt="Damini Gupta - Makeup Artist">
+      </div>
+
       <h1>DAMINI <span>GUPTA</span></h1>
       <h2>MAKEUP ARTIST</h2>
       <p>Bridal • Party • Occasion</p>
