--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
   <section class="section portfolio animate">
     <h3>Portfolio</h3>
     <div class="portfolio-grid">
-      <img src="images/1.webp" alt="Makeup" loading="lazy">
-      <img src="images/2.webp" alt="Makeup" loading="lazy">
-      <img src="images/3.webp" alt="Makeup" loading="lazy">
-      <img src="images/4.webp" alt="Makeup" loading="lazy">
+      <img src="images/1.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy">
+      <img src="images/2.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy">
+      <img src="images/3.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy">
+      <img src="images/4.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy">
       <!-- <img src="images/5.webp" alt="Makeup"> -->
-      <img src="images/6.webp" alt="Makeup" loading="lazy">
-      <img src="images/7.webp" alt="Makeup" loading="lazy">
-      <img src="images/8.webp" alt="Makeup" loading="lazy">
-      <img src="images/9.webp" alt="Makeup" loading="lazy">
-      <img src="images/10.jpg" alt="Makeup" loading="lazy">
-      <img src="images/11.jpg" alt="Makeup" loading="lazy">
+      <img src="images/6.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy">
+      <img src="images/7.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy">
+      <img src="images/8.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy">
+      <img src="images/9.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy">
+      <img src="images/10.webp" alt="Damini Gupta Makeup Artist Engagement Makeup" loading="lazy">
+      <img src="images/11.webp" alt="Damini Gupta Makeup Artist Engagement Makeup" loading="lazy">
     </div>
   </section>
 
