--- a/index.html
+++ b/index.html
@@ -5,26 +5,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DAMINI GUPTA | Makeup Artist</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- SEO -->
+  <meta name="description"
+    content="Damini Gupta is a certified bridal makeup artist in Noida, specializing in HD bridal, engagement, party, and glam makeup.">
+
+  <!-- Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Poppins:wght@300;400;500&display=swap"
     rel="stylesheet">
+
+  <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <!-- HERO SECTION -->
+  <!-- ================= HERO ================= -->
   <header class="hero">
     <div class="hero-content">
+
+      <!-- PROFILE IMAGE -->
       <div class="hero-profile">
-        <img src="images/damini.webp" alt="Damini Gupta - Makeup Artist">
+        <img src="images/damini.webp" alt="Damini Gupta Bridal Makeup Artist">
       </div>
 
       <h1>DAMINI <span>GUPTA</span></h1>
       <h2>MAKEUP ARTIST</h2>
       <p>Bridal • Party • Occasion</p>
+
       <div class="hero-buttons">
         <a href="https://instagram.com/d__glam_makeovers" target="_blank">
           <i class="fa-brands fa-instagram"></i>
@@ -38,13 +49,13 @@
     </div>
   </header>
 
-  <!-- ABOUT -->
+  <!-- ================= ABOUT ================= -->
   <section class="section about animate">
     <h3>About Me</h3>
     <p>
       Certified and passionate Bridal Makeup Artist with advanced professional training
       from <strong>UK International London Beauty School, Noida</strong>.
-      Skilled in creating flawless, elegant, and long-lasting bridal s tailored to
+      Skilled in creating flawless, elegant, and long-lasting bridal looks tailored to
       individual features and occasions.
     </p>
     <p>
@@ -54,7 +65,7 @@
     </p>
   </section>
 
-  <!-- SKILLS -->
+  <!-- ================= SKILLS ================= -->
   <section class="section skills animate">
     <h3>Expertise</h3>
     <div class="skills-grid">
@@ -67,25 +78,49 @@
     </div>
   </section>
 
-  <!-- PORTFOLIO -->
+  <!-- ================= PORTFOLIO ================= -->
   <section class="section portfolio animate">
     <h3>Portfolio</h3>
+
     <div class="portfolio-grid">
-      <img src="images/1.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy">
-      <img src="images/2.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy">
-      <img src="images/3.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy">
-      <img src="images/4.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy">
+      <img src="images/1.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
+        onclick="openLightbox(this.src)">
+      <img src="images/2.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
+        onclick="openLightbox(this.src)">
+      <img src="images/3.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
+        onclick="openLightbox(this.src)">
+      <img src="images/4.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
+        onclick="openLightbox(this.src)">
       <!-- <img src="images/5.webp" alt="Makeup"> -->
-      <img src="images/6.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy">
-      <img src="images/7.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy">
-      <img src="images/8.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy">
-      <img src="images/9.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy">
-      <img src="images/10.webp" alt="Damini Gupta Makeup Artist Engagement Makeup" loading="lazy">
-      <img src="images/11.webp" alt="Damini Gupta Makeup Artist Engagement Makeup" loading="lazy">
+      <img src="images/6.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
+        onclick="openLightbox(this.src)">
+      <img src="images/7.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
+        onclick="openLightbox(this.src)">
+      <img src="images/8.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
+        onclick="openLightbox(this.src)">
+      <img src="images/9.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
+        onclick="openLightbox(this.src)">
+      <img src="images/10.webp" alt="Damini Gupta Makeup Artist Engagement Makeup" loading="lazy"
+        onclick="openLightbox(this.src)">
+      <img src="images/11.webp" alt="Damini Gupta Makeup Artist Engagement Makeup" loading="lazy"
+        onclick="openLightbox(this.src)">
     </div>
   </section>
 
-  <!-- CONTACT -->
+  <!-- ================= BOOKING CTA ================= -->
+  <!-- <section class="section booking-cta animate">
+    <h3>Book Your Bridal Makeup</h3>
+    <p>
+      Looking for a flawless, long-lasting bridal look for your special day?
+      Get in touch to book your consultation.
+    </p>
+
+    <a href="https://wa.me/917006229781" target="_blank" class="cta-btn">
+      <i class="fa-brands fa-whatsapp"></i> Book on WhatsApp
+    </a>
+  </section> -->
+
+  <!-- ================= CONTACT ================= -->
   <section class="section contact animate">
     <h3>Contact</h3>
     <p>📍 Sector 26, Noida</p>
@@ -97,6 +132,25 @@
   <footer>
     <p>© 2026 Damini Gupta | Makeup Artist</p>
   </footer>
+
+  <!-- ================= LIGHTBOX ================= -->
+  <div id="lightbox" onclick="closeLightbox()">
+    <span class="close">&times;</span>
+    <img id="lightbox-img" src="" alt="Makeup Zoom View">
+  </div>
+
+  <script>
+    function openLightbox(src) {
+      document.getElementById("lightbox-img").src = src;
+      document.getElementById("lightbox").style.display = "flex";
+      document.body.style.overflow = "hidden";
+    }
+
+    function closeLightbox() {
+      document.getElementById("lightbox").style.display = "none";
+      document.body.style.overflow = "auto";
+    }
+  </script>
 
 </body>
 
