--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="google-site-verification" content="Y8ASGCX9k2i_yevttOVhDl1xMzKme8BGo1IHqv7Z8q4" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DAMINI GUPTA | Makeup Artist</title>
@@ -29,7 +30,7 @@
 
       <!-- PROFILE IMAGE -->
       <div class="hero-profile">
-        <img src="images/damini.webp" alt="Damini Gupta Bridal Makeup Artist">
+        <img src="images/damini-gupta.webp" alt="Damini Gupta Bridal Makeup Artist">
       </div>
 
       <h1>DAMINI <span>GUPTA</span></h1>
@@ -83,26 +84,25 @@
     <h3>Portfolio</h3>
 
     <div class="portfolio-grid">
-      <img src="images/1.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
+      <img src="images/bridal-makeup-1.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
         onclick="openLightbox(this.src)">
-      <img src="images/2.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
+      <img src="images/bridal-makeup-2.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
         onclick="openLightbox(this.src)">
-      <img src="images/3.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
+      <img src="images/bridal-makeup-3.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
         onclick="openLightbox(this.src)">
-      <img src="images/4.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
+      <img src="images/bridal-makeup-4.webp" alt="Damini Gupta Makeup Artist Bridal Makeup" loading="lazy"
+        onclick="openLightbox(this.src)">      
+      <img src="images/glam-makeup-1.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
         onclick="openLightbox(this.src)">
-      <!-- <img src="images/5.webp" alt="Makeup"> -->
-      <img src="images/6.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
+      <img src="images/glam-makeup-2.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
         onclick="openLightbox(this.src)">
-      <img src="images/7.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
+      <img src="images/glam-makeup-3.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
         onclick="openLightbox(this.src)">
-      <img src="images/8.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
+      <img src="images/glam-makeup-4.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
         onclick="openLightbox(this.src)">
-      <img src="images/9.webp" alt="Damini Gupta Makeup Artist Glam Makeup" loading="lazy"
+      <img src="images/engagement-makeup-1.webp" alt="Damini Gupta Makeup Artist Engagement Makeup" loading="lazy"
         onclick="openLightbox(this.src)">
-      <img src="images/10.webp" alt="Damini Gupta Makeup Artist Engagement Makeup" loading="lazy"
-        onclick="openLightbox(this.src)">
-      <img src="images/11.webp" alt="Damini Gupta Makeup Artist Engagement Makeup" loading="lazy"
+      <img src="images/engagement-makeup-2.webp" alt="Damini Gupta Makeup Artist Engagement Makeup" loading="lazy"
         onclick="openLightbox(this.src)">
     </div>
   </section>
